--- a/index.html
+++ b/index.html
@@ -58,98 +58,172 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">Titolo</th>
-                    <th scope="col">Data prestito</th>
-                    <th scope="col">Stato</th>
-                    <th scope="col">Azioni</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td scope="row">I pilastri della terra</td>
-                    <td>-</td>
-                    <td>
-                        <div class="dispo">Disponibile</div>
+    <div class="container tabella">
+        <div class="row">
+
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Titolo</th>
+                        <th scope="col">Data prestito</th>
+                        <th scope="col">Stato</th>
+                        <th scope="col">Azioni</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td scope="row">I pilastri della terra</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
                     </td>
+
+                    </tr>
+                    <tr>
+                        <td scope="row">I promessi sposi</td>
+                        <td>-</td>
+                        
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                        
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td scope="row">Il signore degli anelli</td>
+                        <td>18/10/2023</td>
+                        <td><span class="badge text-bg-warning col-w">In prestito</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
                                 <i class="fa-solid fa-pencil"></i>
                             </button>
-                        <td><button type="button" class="btn btn-outline-secondary bottoni">
+                            <button type="button" class="btn btn-outline-secondary">
                                 <i class="fa-solid fa-trash"></i>
                             </button>
                         </td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <td scope="row">fdg</td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <td scope="row">2</td>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-            </tbody>
-        </table>
+                    </tr>
+                    <tr>
+                        <td>Harry Potter e la pietra filosofale</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>Il codice Da Vinci</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>Shining</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>La divina commedia</td>
+                        <td>21/09/2023</td>
+                        <td><span class="badge text-bg-warning col-w">In prestito</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>Il trono di spade</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>Il mondo di Sofia</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                        <td>25/07/2023</td>
+                        <td><span class="badge text-bg-warning col-w">In prestito</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>Il piccolo principe</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td scope="row">2</td>
+                        <td>Larry the Bird</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-pencil"></i>
+                        </button>
+                        <button type="button" class="btn btn-outline-secondary">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
+
 
 
     <!-- lasciarlo in fondo e non toglierlo -->
