--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
                         <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
 
                     </tr>
                     <tr>
                         <td scope="row">I promessi sposi</td>
                         <td>-</td>
-                        
-                            <td><span class="badge text-bg-success">Disponibile</span></td>
-                        
+
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td scope="row">Il signore degli anelli</td>
@@ -115,108 +115,108 @@
                         <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Il codice Da Vinci</td>
                         <td>-</td>
                         <td><span class="badge text-bg-danger">Non disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Shining</td>
                         <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>La divina commedia</td>
                         <td>21/09/2023</td>
                         <td><span class="badge text-bg-warning col-w">In prestito</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Il trono di spade</td>
                         <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Il mondo di Sofia</td>
                         <td>-</td>
                         <td><span class="badge text-bg-danger">Non disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
                         <td>25/07/2023</td>
                         <td><span class="badge text-bg-warning col-w">In prestito</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Il piccolo principe</td>
                         <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                     <tr>
-                        <td scope="row">2</td>
-                        <td>Larry the Bird</td>
+                        <td>La storia infinita</td>
+                        <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-pencil"></i>
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary">
-                            <i class="fa-solid fa-trash"></i>
-                        </button>
-                    </td>
+                                <i class="fa-solid fa-pencil"></i>
+                            </button>
+                            <button type="button" class="btn btn-outline-secondary">
+                                <i class="fa-solid fa-trash"></i>
+                            </button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
